[STYLES] update styles for mobile

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 	<script src="dist/templates/app.js" async></script>
     <script src="dist/js/vendor/require.js" data-main="dist/js/app.js" async></script>
     <link rel="stylesheet" type="text/css" href="dist/css/style.css">
+
     <title>Progress Bar</title>
     <link rel="preconnect" href="https://pb-api.herokuapp.com">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div id="progressbar-app"></div>
